responsive design for cards is built. need to fix spacing of items in main and modify cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ main h3, p {
     color: #ECEECA;
     margin: 0 20px 0 0;
     padding: 4%;
+    height: 100%;
 }
 
 .syllabus ul {
@@ -135,12 +136,11 @@ main h3, p {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    height: 400px;
 }
 
 .card {
-    height: 400px;
     width: 31%;
-    object-position: top;
 }
 
 
@@ -169,14 +169,14 @@ instead of relative to the image or div box */
         max-width: 40%;
         flex: 1 0 auto;
     }
+
+    .card {
+        width: 48%;
+    }
 }
 
 /* LARGE PHONE SIZING */
 @media screen and (max-width: 768px) {
-    .page-header {
-        /* flex-direction: column; */
-    }
-
     .logo {
         max-width: 30%;
         flex: 1 0 auto;
@@ -189,14 +189,14 @@ instead of relative to the image or div box */
     .syllabus {
         margin: 0;
     }
+
+    .card {
+        width: 100%;
+    }
 }
 
 /* SMALL PHONE SIZING */
 @media screen and (max-width: 576px) {
-    .page-header {
-        /* flex-direction: column; */
-    }
-    
     .logo {
         max-width: 20%;
         flex: 1 0 auto;
